# pplug-updater

./: meson.build
data/: meson.build
debian/: changelog  control  copyright  lpplug-updater.install
po/: en_GB.po  zh_CN.po
src/: meson.build  updater.c  updater.cpp  updater.h  updater.hpp
